version 1.7.2, in progress
- list-creation: add "dataset" option to use all currently
  available data series
- Fix bug in recording result of TSLS heteroskedasticity test
- Add sscanf command (a subset of C sscanf functionality)
- Add shell capture for strings via $(shellcommand)
- Paths stuff: add non-configurable "dotdir" to hold per-user
  automatically-created files
- Fix bugs 1861010, 1868859, 1869271, 1870459, 1870973
- Rationalize frequency plot dialog
- Add Help item to forecast dialog
- Fixes for matrix "dot operations"
- Fix breakage in graph color selector
- Fixes for ODS spreadsheet importer
- Document the --auto option for the "omit" command, and add
  a GUI handle for it
- MS Windows and OS X packages: update to gnuplot 4.3 (CVS)
- Graphing internals: use UTF-8 for internationalized strings
- Models having an exact fit: block various invalid tests
- det() function: fix for singular matrices
- GUI script editor enhancements

12/25/2007 version 1.7.1
- Add documentation for "set stopwatch"
- Add movavg function to genr (not documented yet)
- Add autocorrelation and heteroskedasticity tests for models
  estimated via TSLS
- Add "dataset resample n" command to resample observations
  with replacement (not documented yet)
- Add functions for matrix I/O from/to text files	
- Fix garch bug when p!=q
- Fix bugs: 1848487, 1847908, 1850842, 1848039, 1840179, 
	1842439, 1841098, 1843664, 1835707, 1841107, 1841774
- Fix bugs in saving/re-opening restricted VECM models as part
  of a gretl session
- Fix bug in CUSUM/CUSUMSQ plots for time series data frequency
  greater than 1
- Work around strange behavior of gnuplot 4.2 on Ubuntu
- Reinstate user-level choice of "Windows-look" emulation
- Reinstate user choice of menu font on Windows
- Script editor: add right-click popup with menu items to
  comment/uncomment selected block of commands, and to execute
  a line or region 
- genr: fix for case where closing parenthesis is missing at 
  the end of a formula